<resources>
    <string name="app_name">Actas Digitales</string>
    <string name="test_text">Whether the find operation has actually completed. The listener may be notified multiple times while the operation is underway, and the numberOfMatches value should not be considered final unless isDoneCounting is true. whether the find operation has actually completed. The listener may be notified multiple times while the operation is underway, and the numberOfMatches value should not be considered final unless isDoneCounting is true. whether the find operation has actually completed. The listener may be notified multiple times while the operation is underway, and the numberOfMatches value should not be considered final unless isDoneCounting is true.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="register"><u>Registrate aqui</u></string>
    <string name="forgot_password"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="doc_number">Nº de documento</string>
    <string name="name">Nombre</string>
    <string name="user_name">Ingrese un nombre de usuario</string>
    <string name="email">Ingrese una direccion de email</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="repeat_password">Repita si contraseña</string>
    <string name="phone_type">Tipo de telefono</string>
    <string name="phone_number">Numero de telefono</string>
    <string name="tramite_id">Nº de id de tramite</string>
    <string name="validez_acta">Para verificar la validéz de su acta, ingerse el número de Documetno y el código asociado al acta al pie de la misma.</string>
    <string name="vigencia_acta">VIGENCIA ACTA</string>
    <string name="numero_de_doc">Numero de Doc.</string>
    <string name="c_digo_de_acosiaci_n_de_acta">Código de acosiación de acta</string>
</resources>