<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_validar_acta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lfarias.actasdigitales.Activities.ValidarActaActivity">

    <TextView
        android:id="@+id/title"
        android:textAlignment="center"
        android:text="@string/vigencia_acta"
        android:textStyle="bold|italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"/>


    <TextView
        android:id="@+id/description3"
        android:textAlignment="inherit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validez_acta"
        android:layout_below="@+id/title"
        android:paddingTop="20dp"
        android:textStyle="italic"
        android:textSize="15sp"
        android:paddingBottom="50dp"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/nro_doc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:layout_below="@+id/description3">

        <EditText
            android:id="@+id/nro_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_de_doc"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/codigo_asociacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:layout_below="@+id/nro_doc1">

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/c_digo_de_acosiaci_n_de_acta"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/codigo_asociacion"
        android:paddingTop="35dp">

        <Button
            android:id="@+id/ir_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="Ir al Inicio"/>

        <Button
            android:id="@+id/verificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="Verificar validez Acta"/>
    </LinearLayout>

</RelativeLayout>
